fix photo alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,12 @@ html {
     margin: 0 0 19px 0;
 }
 
+@media (max-width: 767px) {
+    #bio .span2 {
+        text-align: center;
+    }
+}
+
 #bio .span4 {
     margin-bottom: 19px;
 }
@@ -42,6 +48,12 @@ html {
     display: block;
     width:96px;
     margin: 0 0 0 0; 
+}
+
+@media (max-width: 767px) {
+    .avatar {
+        margin: 0 auto 0 auto; 
+    }
 }
 
 .resize {
